# feynml

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml  pytest.ini  test.fml
.github/workflows/: ci.yml  devel.yml  fast-forward.yml  pre-commit.yml  release.yml  stable.yml  test.yml
debug/: Untitled.ipynb  css.ipynb
docs/: Makefile
docs/source/: conf.py  index.rst  pyfeyn-logo.py
docs/source/_autosummary/: pyfeyn2.auto.bend.auto_bend.rst  pyfeyn2.auto.bend.rst  pyfeyn2.auto.label.auto_label.rst  pyfeyn2.auto.label.auto_label_legs.rst  pyfeyn2.auto.label.auto_label_propagators.rst  pyfeyn2.auto.label.rst  pyfeyn2.auto.position.feynman_adjust_points.rst  pyfeyn2.auto.position.remove_unnecessary_vertices.rst  pyfeyn2.auto.position.rst  pyfeyn2.auto.position.scale_positions.rst  pyfeyn2.auto.reshuffle.rst  pyfeyn2.auto.rst  pyfeyn2.feynmandiagram.Bending.rst  pyfeyn2.feynmandiagram.CSSSheetConverter.rst  pyfeyn2.feynmandiagram.CSSStringConverter.rst  pyfeyn2.feynmandiagram.Connector.rst  pyfeyn2.feynmandiagram.FeynML.rst  pyfeyn2.feynmandiagram.FeynmanDiagram.rst  pyfeyn2.feynmandiagram.Head.rst  pyfeyn2.feynmandiagram.Identifiable.rst  pyfeyn2.feynmandiagram.Label.rst  pyfeyn2.feynmandiagram.Labeled.rst  pyfeyn2.feynmandiagram.Leg.rst  pyfeyn2.feynmandiagram.Line.rst  pyfeyn2.feynmandiagram.Meta.rst  pyfeyn2.feynmandiagram.Momentum.rst  pyfeyn2.feynmandiagram.PDG.rst  pyfeyn2.feynmandiagram.Point.rst  pyfeyn2.feynmandiagram.Propagator.rst  pyfeyn2.feynmandiagram.Sourcing.rst  pyfeyn2.feynmandiagram.Styled.rst  pyfeyn2.feynmandiagram.Targeting.rst  pyfeyn2.feynmandiagram.Texted.rst  pyfeyn2.feynmandiagram.Tool.rst  pyfeyn2.feynmandiagram.Vertex.rst  pyfeyn2.feynmandiagram.aliasMeta.rst  pyfeyn2.feynmandiagram.alias_meta.rst  pyfeyn2.feynmandiagram.get_types.rst  pyfeyn2.feynmandiagram.rst  pyfeyn2.mkfeyndiag.main.rst  (+92 more)
docs/source/feynml/: FeynML.ipynb  index.rst  test.fml
docs/source/feynml/attributes/: class.rst  label.rst  shape.rst  style.rst  type.rst  x.rst  y.rst  z.rst
docs/source/feynml/attributes/shape/: blob.ipynb  cross.ipynb  dot.ipynb  empty.ipynb  square.ipynb  star.ipynb
docs/source/feynml/attributes/style/: arrow-pos.rst  bend-direction.rst  bend-in.rst  bend-loop.rst  bend-min-distance.rst  bend-out.rst  bend.rst  color.rst  direction.rst  layout.rst  length.rst  line.rst  momentum-arrow.rst  opacity.rst  parallel-arrow-displace.rst  parallel-arrow-sense.rst  symbol.rst  tension.rst
docs/source/feynml/attributes/type/: anti fermion.ipynb  boson.ipynb  chargino.ipynb  fermion.ipynb  gaugino.ipynb  ghost.ipynb  gluino.ipynb  gluon.ipynb  gravitino.ipynb  graviton.ipynb  higgs.ipynb  higgsino.ipynb  line.ipynb  majorana.ipynb  neutralino.ipynb  phantom.ipynb  photon.ipynb  scalar.ipynb  slepton.ipynb  squark.ipynb  vector.ipynb
docs/source/feynml/elements/: diagram.rst  feynml.rst  head.rst  id.rst  leg.rst  name.rst  pdgid.rst  propagator.rst  sense.rst  source.rst  target.rst  version.rst  vertex.rst
docs/source/feynml/elements/momentum/: e.rst  momentum.rst  name.rst  px.rst  py.rst  pz.rst
docs/source/gallery/: index.rst
docs/source/gallery/feynman/: feynman.ipynb
docs/source/gallery/overleaf/: overleaf.ipynb
docs/source/gallery/pyfeyn/: pyfeyn.ipynb
docs/source/interfaces/: index.rst
docs/source/interfaces/dot/: dot.ipynb
docs/source/interfaces/hepmc/: hepmc.ipynb
docs/source/interfaces/qgraf/: index.rst  output.out  qgraf_2to2.ipynb  tmp.model  tmp.tex
docs/source/interfaces/qgraf/1_to_1/: output.out  qgraf.ipynb  tmp.model  tmp.sty  tmp.tex
docs/source/interfaces/qgraf/2_to_2/: qgraf_2to2.ipynb
docs/source/renderers/: index.rst
docs/source/renderers/all/: All.ipynb
docs/source/renderers/dot/: Dot.ipynb
docs/source/renderers/latex/: index.rst
docs/source/renderers/latex/feynmp/: FeynMP.ipynb
docs/source/renderers/latex/tikz/: tikzfeynman.ipynb
docs/source/renderers/mpl/: index.rst
docs/source/renderers/mpl/feynman/: feynman.ipynb
docs/source/renderers/pyx/: PyX.ipynb
docs/source/renderers/text/: index.rst
docs/source/shared/: attr_tab.rst  shape_tab.rst  style_tab.rst  type_tab.rst
docs/source/shared/attribute/: bend.rst  class.rst  id.rst  label.rst  momentum.rst  pdgid.rst  sense.rst  shape.rst  source.rst  style.rst  target.rst  tension.rst  text.rst  type.rst  x.rst  y.rst  z.rst
docs/source/shared/style/: arrow-displace.rst  arrow-length.rst  arrow-pos.rst  arrow-sense.rst  arrow-width.rst  bend-direction.rst  bend-in.rst  bend-loop.rst  bend-min-distance.rst  bend-out.rst  bend.rst  color.rst  direction.rst  layout.rst  length.rst  line.rst  momentum-arrow.rst  nloops.rst  opacity.rst  parallel-arrow-displace.rst  parallel-arrow-sense.rst  symbol.rst  tension.rst  xamp.rst  yamp.rst
feynml/: __init__.py  connector.py  feynmandiagram.py  feynml.py  head.py  id.py  label.py  labeled.py  leg.py  line.py  link.py  log.py  meta.py  momentum.py  particle.py  particles.py  pdgid.py  point.py  propagator.py  shape.py  sheet.py  sourcing.py  style.py  styled.py  targeting.py  type.py  types.py  util.py  vertex.py  xml.py
feynml/interface/: formcalc.py  hepmc.py  interface.py  lhe.py  qgraf.py
feynml/interface/formcalc/: TopologyList.py  fermion.py  feynmangraph.py  field.py  insertions.py  particle.py  propagator.py  rule.py  sequenceform.py  topology.py  topologylist.py  vector.py  vertex.py
feynml/interface/madgraph/: ps.py
feynml/interface/madgraph/plugin/: __init__.py  exporter.py
feynml/topology/: __init__.py  four.py  three.py  two.py  two_to_two.py
tests/: example.HepMC  example.lhe  simple.xml  test.fml  test_css.py  test_css_rules.py  test_fd_css.py  test_fermionfactor.py  test_feynml.py  test_fml.py  test_fml_css.py  test_formcalc.py  test_hepmc.py  test_insert.py  test_lhe.py  test_matrix.py  test_split.py  test_styles.css  test_topology.py  test_vertex_as_param.py  test_xml.py
tests/interface/: born.ps  born_matrix.ps  lo.ps  loop_matrix.ps  matrix_1.ps  matrix_2.ps  test_ps.py
(+11 files in other folders)
